7311: Fix incorrect equality tests
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>